--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@ footer { background:#0A2342; color:white; text-align:center; padding:40px 20px; 
 <footer id="contact">
 <h2>Contact Apex</h2>
 <p>For enquiries, support or a confidential discussion:</p>
-<p><b>Email:</b> your-email-here@example.com</p>
+<p><b>Email:</b> 
+  <a href="mailto:tony@apexresolutions.co.uk">tony@apexresolutions.co.uk</a>
+</p>
+<p><b>LinkedIn:</b> 
+  <a href="https://www.linkedin.com/in/tony-h-b15a0ba3/" target="_blank" rel="noopener">
+    View profile
+  </a>
+</p>
+
 </footer>
 
 </body>
